# 2048

./: .gitignore  2048  CMakeLists.txt
include/: Direction.h  Game.h  Grid.h
include/ai/: HumanPlayer.h  Player.h
include/ai/minmax/: FullSearchPlayer.h  GameState.h  MinMaxPlayer.h  MinmaxPlayer.h
include/game/: Controller.h
include/game/logic/: Direction.h  Game.h  Grid.h
include/graphics/: GameArea.h  GameWindow.h
src/: Game.cpp  Grid.cpp  main.cpp
src/ai/: GameState.cpp  HumanPlayer.cpp
src/ai/minmax/: FullSearchPlayer.cpp  GameState.cpp  MinMaxPlayer.cpp  MinmaxPlayer.cpp
src/game/: Controller.cpp
src/game/logic/: Game.cpp  Grid.cpp
src/graphics/: GameArea.cpp  GameWindow.cpp
src/tests/: runTests.cpp  testGrid.cpp  testMinMax.cpp
tests/: Test.cpp  Test.h  runTests.cpp  test.cpp
